<resources>
    <string name="app_name">Notepad Kotlin</string>
    <string name="action_settings">Settings</string>
    <string name="last_updated">Last updated: %1s</string>
    <string name="note_text">Note</string>
    <string name="note_title">Title</string>
    <string name="note_pad_title">My Notepad</string>
    <string name="edit_note">Edit Note</string>
    <string name="save_note">Save</string>
    <string name="no_note_yet">No Note yet!</string>
</resources>